--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+# crypto
 bs58 = "0.4.0"
 blake2 = "0.10.4"
 sha3 = "0.10.2"
 sha2 = "0.10.2"
 curve25519-dalek = "3.2.1"
+
 reqwest = { version = "0.11.11", features = ["blocking", "json"] }
 serde_json = "1.0.82"
 
