--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,15 @@ name = "waves-rust"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+# crypto
+bs58 = "0.4.0"
+blake2 = "0.10.4"
+sha3 = "0.10.2"
+sha2 = "0.10.2"
+curve25519-dalek = "3.2.1"
+
+reqwest = { version = "0.11.11", features = ["json"] }
+tokio = { version = "1.12.0", features = ["full"] }
+serde_json = "1.0.82"
+
