--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ blake2 = "0.10.4"
 sha3 = "0.10.2"
 sha2 = "0.10.2"
 curve25519-dalek = "3.2.1"
+base64 = "0.13.0"
 
 reqwest = { version = "0.11.11", features = ["json"] }
 tokio = { version = "1.12.0", features = ["full"] }
