--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,11 +17,12 @@ reqwest = { version = "0.11.11", features = ["json"] }
 tokio = { version = "1.12.0", features = ["full"] }
 serde_json = "1.0.82"
 
-#waves-protobuf-schemas = { git = "https://github.com/wavesplatform/protobuf-schemas" }
 prost = "0.11.0"
 tonic = "0.8.0"
 
 rand = "0.8.5"
+
+anyhow = "1.0.62"
 
 [build-dependencies]
 tonic-build = "0.8"
