--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ base64 = "0.13.0"
 reqwest = { version = "0.11.11", features = ["json"] }
 tokio = { version = "1.12.0", features = ["full"] }
 serde_json = "1.0.82"
+regex = "1.6.0"
+urlencoding = "2.1.0"
 
 prost = "0.11.0"
 tonic = "0.8.0"
