--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ tokio = { version = "1.12.0", features = ["full"] }
 serde_json = "1.0.82"
 regex = "1.6.0"
 urlencoding = "2.1.0"
+url = "2.2.2"
 
 prost = "0.11.0"
 tonic = "0.8.0"
