--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,11 @@ anyhow = "1.0.62"
 
 hex = "0.4.3"
 
+[dev-dependencies]
+once_cell = "1.14.0"
+testcontainers = "0.14.0"
+pretty_env_logger = "0.4.0"
+
 [build-dependencies]
 tonic-build = "0.8"
 protobuf-src = "1.0.5+3.19.3"
