--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ categories = [
     "cryptography"
 ]
 repository = "https://github.com/DiLeqL/waves-rust"
+#todo which licence to use?
+#license = "MIT"
 
 [dependencies]
 # crypto
