--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,9 @@ sha2 = "0.10.2"
 curve25519-dalek = "4.0.0-pre.2"
 ed25519-dalek = "1.0.1"
 base64 = "0.13.0"
+hex = "0.4.3"
 
+# network
 reqwest = { version = "0.11.11", features = ["json"] }
 tokio = { version = "1.12.0", features = ["full"] }
 serde_json = "1.0.82"
@@ -42,15 +44,17 @@ regex = "1.6.0"
 urlencoding = "2.1.0"
 url = "2.2.2"
 
+# protobuf
 prost = "0.11.0"
 tonic = "0.8.0"
+
+# util
 thiserror = "1.0.32"
-
 rand = "0.8.5"
-
-hex = "0.4.3"
-
 anyhow = "1.0.64"
+
+[lib]
+doctest = false
 
 [build-dependencies]
 tonic-build = "0.8"
