--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "waves-rust"
-version = "0.2.2"
+version = "0.2.3"
 edition = "2021"
 rust-version = "1.56"
 authors = ["Waves Labs <admin@waveslabs.com>", "Alexandr Devyatkin <novealx@gmail.com>"]
@@ -29,7 +29,7 @@ blake2 = "0.10.4"
 sha3 = "0.10.2"
 sha2 = "0.10.2"
 # todo: use root crate when its dependencies will be resolved
-curve25519-dalek = { git = "https://github.com/nazar-pc/curve25519-dalek", branch="relax-zeroize", version = "4.0.0-pre.2"}
+curve25519-dalek = { git = "https://github.com/nazar-pc/curve25519-dalek", version = "4.0.0-pre.2", tag = "4.0.0-pre.2"}
 ed25519-dalek = "1.0.1"
 base64 = "0.13.0"
 hex = "0.4.3"
