--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -84,4 +84,4 @@ jobs:
         uses: actions-rs/tarpaulin@v0.1
         with:
           version: '0.15.0'
-          args: '--ignore-tests --avoid-cfg-tarpaulin'
+          args: '--ignore-tests'
